[gd_scene load_steps=4 format=3 uid="uid://simlhqeanfc8"]

[ext_resource type="Script" path="res://menus/pause_gui.gd" id="1_dks43"]
[ext_resource type="PackedScene" uid="uid://de63oipctsyad" path="res://menus/pause_menu.tscn" id="1_ghhc0"]
[ext_resource type="PackedScene" uid="uid://cs3kyspr0gkui" path="res://menus/settings_menu.tscn" id="2_q1aje"]

[node name="PauseGui" type="Node"]
script = ExtResource("1_dks43")

[node name="PauseMenu" parent="." instance=ExtResource("1_ghhc0")]
process_mode = 3
visible = false

[node name="SettingsMenu" parent="." instance=ExtResource("2_q1aje")]
visible = false

[connection signal="menu_changed" from="PauseMenu" to="." method="_on_menu_changed"]
